# ClinicalProfileAgent

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260325_0001_initial.py  20260326_0002_add_pdf_export.py  20260327_0003_add_patient_profile_fields.py  20260327_0004_add_therapist_profile_assets.py  20260330_0005_add_patient_city.py  20260407_0006_add_therapist_google_oauth.py  20260407_0007_add_microsoft_teams_support.py  20260409_0008_add_password_reset_codes.py
apps/api/app/: main.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: __init__.py  base.py  session.py  types.py
apps/api/app/domain/: __init__.py  enums.py  models.py  schemas.py
apps/api/app/scripts/: fix_demo_email.py  purge_template_cache.py  (+3 more)
apps/api/fixtures/: sample_transcript.json
apps/api/tests/: conftest.py  helpers.py  test_ai_service.py  test_auth_profile_routes.py  test_deidentification.py  test_document_file_route.py  test_document_profile_assets.py  test_e2e_happy_path.py  test_google_docs_service.py  test_google_oauth_profile_routes.py  test_google_session_sync_route.py  test_google_workspace_account_selection.py  test_microsoft_oauth_profile_routes.py  test_normalization.py  test_password_reset_routes.py  test_patient_update_route.py  test_schema_validation.py  test_signature_anchor_detection.py  test_template_adapted_draft.py  test_upcoming_meetings_route.py  test_webhook_route.py
(+78 files in other folders)
